fix navbar on small devices

--- a/src/components/sidebar/index.css
+++ b/src/components/sidebar/index.css
@@ -1,76 +1,99 @@
 .main-sidebar {
-    top: 0;
-    position: fixed;
-    height: calc(100vh);
-    background: #fff;
-    z-index: 1070;
-    will-change: transform;
-    transition: transform 0.2s ease-in-out;
-    box-shadow: 0 0.125rem 9.375rem rgba(90, 97, 105, 0.1), 0 0.25rem 0.5rem rgba(90, 97, 105, 0.12),
-        0 0.9375rem 1.375rem rgba(90, 97, 105, 0.1), 0 0.4375rem 2.1875rem rgba(165, 182, 201, 0.1);
+  top: 0;
+  position: fixed;
+  height: calc(100vh);
+  background: #fff;
+  z-index: 1070;
+  will-change: transform;
+  transition: transform 0.2s linear;
+  box-shadow: 0 0.125rem 9.375rem rgba(90, 97, 105, 0.1),
+    0 0.25rem 0.5rem rgba(90, 97, 105, 0.12),
+    0 0.9375rem 1.375rem rgba(90, 97, 105, 0.1),
+    0 0.4375rem 2.1875rem rgba(165, 182, 201, 0.1);
 }
 .main-sidebar.open {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    box-shadow: 0 0.125rem 9.375rem rgba(90, 97, 105, 0.1), 0 0.25rem 0.5rem rgba(90, 97, 105, 0.12),
-        0 0.9375rem 1.375rem rgba(90, 97, 105, 0.1), 0 0.4375rem 2.1875rem rgba(165, 182, 201, 0.1);
+  transform: translateX(0);
+  box-shadow: 0 0.125rem 9.375rem rgba(90, 97, 105, 0.1),
+    0 0.25rem 0.5rem rgba(90, 97, 105, 0.12),
+    0 0.9375rem 1.375rem rgba(90, 97, 105, 0.1),
+    0 0.4375rem 2.1875rem rgba(165, 182, 201, 0.1);
 }
 
 .main-sidebar .nav-wrapper {
-    overflow-y: auto;
-    overflow-x: hidden;
-    height: calc(100vh - 3.75rem - 1px);
-    margin-left: 1rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: calc(100vh - 3.75rem - 1px);
+  margin-left: 1rem;
 }
 .main-sidebar .nav .nav-item {
-    white-space: nowrap;
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    will-change: background-color, box-shadow, color;
-    transition: box-shadow 0.2s ease, color 0.2s ease, background-color 0.2s ease;
-    font-size: 0.85rem;
-    text-align: start;
-    position: relative;
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  will-change: background-color, box-shadow, color;
+  transition: box-shadow 0.2s ease, color 0.2s ease, background-color 0.2s ease;
+  font-size: 0.85rem;
+  text-align: start;
+  position: relative;
 }
 
 .main-sidebar .nav .nav-item .nav-link {
-    border-bottom: 1px solid #e1e5eb;
-    font-weight: 400;
-    color: var(--dark-gray);
-    padding: 0.9375rem 1.5625rem;
+  border-bottom: 1px solid #e1e5eb;
+  font-weight: 400;
+  color: var(--dark-gray);
+  padding: 0.9375rem 1.5625rem;
 }
 .main-sidebar .nav .nav-item .nav-link i {
-    min-width: 1.25rem;
-    font-size: 90%;
-    text-align: center;
-    vertical-align: middle;
-    will-change: color;
-    color: #cacedb;
-    transition: color 0.2s ease;
-    margin-right: 0.375rem;
+  min-width: 1.25rem;
+  font-size: 90%;
+  text-align: center;
+  vertical-align: middle;
+  will-change: color;
+  color: #cacedb;
+  transition: color 0.2s ease;
+  margin-right: 0.375rem;
 }
 .main-sidebar .nav .nav-item .nav-link i.material-icons {
-    font-size: 1.125rem;
-    top: -1px;
+  font-size: 1.125rem;
+  top: -1px;
 }
 .main-sidebar .nav .nav-item .nav-link.active,
 .main-sidebar .nav .nav-item .nav-link:hover,
 .main-sidebar .nav .nav-item.active,
 .main-sidebar .nav .nav-item:hover {
-    box-shadow: inset 0.1875rem 0 0 var(--primary);
-    background-color: #eeeeee;
-    color: var(--primary);
+  box-shadow: inset 0.1875rem 0 0 var(--primary);
+  background-color: #eeeeee;
+  color: var(--primary);
 }
 .main-sidebar .nav .nav-item .nav-link.active i,
 .main-sidebar .nav .nav-item .nav-link:hover i,
 .main-sidebar .nav .nav-item.active i,
 .main-sidebar .nav .nav-item:hover i {
-    color: var(--primary);
+  color: var(--primary);
 }
 
+.navabar-sm {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  /* display: none; */
+  z-index: 9999;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  box-shadow: var(--shadow) 0 1px 1px 1px;
+  display: none;
+}
+.navabar-sm .material-icons {
+  color: #3d5170;
+  /* font-size: 32px; */
+}
 @media (max-width: 768px) {
-    .main-sidebar {
-        transform: translateX(100vw);
-    }
+  .main-sidebar {
+    transform: translateX(-200vw);
+  }
+  .navabar-sm {
+    display: block;
+  }
 }
